crates/codira_codegen/src/snapshots/codira_codegen__test__shift_op_i8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: i8, b: i8) -> i8 { a << b }\n    pub fn rightshift(a: i8, b: i8) -> i8 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i8 @leftshift(i8 %0, i8 %1) {
body:
  %left_shift = shl i8 %0, %1
  ret i8 %left_shift
}

define i8 @rightshift(i8 %0, i8 %1) {
body:
  %right_shift = ashr i8 %0, %1
  ret i8 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

