crates/codira_codegen/src/snapshots/codira_codegen__test__shift_op_u32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn leftshift(a: u32, b: u32) -> u32 { a << b }\n    pub fn rightshift(a: u32, b: u32) -> u32 { a >> b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @leftshift(i32 %0, i32 %1) {
body:
  %left_shift = shl i32 %0, %1
  ret i32 %left_shift
}

define i32 @rightshift(i32 %0, i32 %1) {
body:
  %right_shift = lshr i32 %0, %1
  ret i32 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

