crates/codira_codegen/src/snapshots/codira_codegen__test__update_parameter.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn add_three(a:i32) -> i32 {\n      a += 3;\n      a\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @add_three(i32 %0) {
body:
  %add = add i32 %0, 3
  ret i32 %add
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

