crates/codira_codegen/src/snapshots/codira_codegen__test__void_return.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1045
expression: "\n    fn bar() {\n        let a = 3;\n    }\n    pub fn foo(a:i32) {\n        let c = bar()\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define void @bar() {
body:
  ret void
}

define void @foo(i32 %0) {
body:
  call void @bar()
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

